--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "angularx-qrcode": "^16.0.2",
     "ionicons": "^7.0.0",
     "moment": "^2.29.4",
     "rxjs": "~7.8.0",
