--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "angularx-qrcode": "^16.0.2",
     "ionicons": "^7.0.0",
     "moment": "^2.29.4",
+    "qrcode-generator": "^1.4.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
